--- a/boilerplate.ini
+++ b/boilerplate.ini
@@ -35,4 +35,5 @@ docs/license.rst = T7JCt0IDBksEuohsOM3rxQ==
 docs/warning.rst = wyn6B84y4EyF5akAlcFsLw==
 docs/make.bat = gnNslqzpUbChSAowdTLk5w==
 docs/Makefile = bYuHwFuBQaV/bs4Ti3pR8Q==
+.gitignore = 5UDXqcQ7dKrlGZQHuTk8eg==
 
